# python-mcp-server-starter

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.ko.md  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml  maintenance.yml  setup.yml  stale.yml
src/: config.ts  helpers.ts  index.ts
src/my_mcp_server/: __init__.py  __main__.py  server.py
src/my_mcp_server/prompts/: __init__.py  code_review.py
src/my_mcp_server/resources/: __init__.py  server_info.py
src/my_mcp_server/tools/: greet.py
src/prompts/: hello.ts
src/tools/: greet.ts
tests/: greet.test.js  hello.test.js  helpers.test.js  test_code_review.py  test_server_info.py  test_tools.py
